--- a/MyEditorTTT/Form1.resx
+++ b/MyEditorTTT/Form1.resx
@@ -163,6 +163,18 @@
         AJ+3aRrnzl2EorIs1wKsIQfInFTbttsA3pclB+xzUsaY6AtZtZp89Rkh3AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="testToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADgAAAAbCAYAAAApvkyGAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAFvSURBVFhH7VbbscUgCExdFEQ9VmMzFsMxR3PjA8So98Mz
+        2Zn9idFlEdGDfhyvwd3xGtwdikFHFoGO43hOtHGNEazTbRh0ZIBZoJtAxsWlUjhLmKwL1U9rdQWDsyKB
+        eTK5XSmTsF6XNegMUx6IBOW3i4DZrlwMQt6YEeaC8aM31uoGMAbrLMI5w2L2LWUYLr8jGWvYAFgywY7q
+        Jv40g0AYa6he6GJc0AdyZ9rPe9gkwNgluuWRbjSZFL4xZIsnTOvhD0/PktCQHuvW6DOolIkMOcCu+IZ1
+        b3QZVMtEghigMi9iWDeBbtAZuYspaRQD7En/hG4K1SDbuiPbOnPlOa6bQzHYOOT/Wp4TugUaBs+XBycQ
+        WVzSJeS5vmP6+zGUH9c953RLsAad9PIo6cX4bLZ2IGH1kpnVrcEY7AzuS+n+0u9BwHInVujWYHfw+3YE
+        +ZCfY2eAtiniTTKP69a8Nbo5lCazP16Du+M1uDt+3CDRB1tCPncAugOEAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="contextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>912, 17</value>
   </metadata>
@@ -180,6 +192,9 @@
   </metadata>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>1090, 17</value>
+  </metadata>
+  <metadata name="timer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1227, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>71</value>
